Bug 1043256 - If unKnownDecoder needs to be used, Content_Encodings will be loaded before OnStartRequest is called on the listener. This makes an error in e10s because Content_Encodings will be loaded before HttpChannelParent can disable them. r=bagder